solved problem in z-index

--- a/staticfiles/css/login/login.css
+++ b/staticfiles/css/login/login.css
@@ -103,6 +103,7 @@ body {
 
 /* 이메일 입력 창이 blur 된 다음, 다시 focus 되었을 때 */
 .email-blur.focus-visible {
+  z-index: 2;
   box-shadow: 0 0 0 3px rgba(255, 119, 119, 0.3);
 }
 
@@ -134,6 +135,13 @@ body {
   border-image: initial;
 }
 
+/*
+  z-index 우선도
+
+  평소 테두리 < blur < focus(파랑)/blur+focus(빨강)
+  
+*/
+
 /* 비밀번호 입력창이 focus되었을 때 */
 .password-input:focus {
   z-index: 2;
@@ -148,11 +156,12 @@ body {
 /* 이메일 입력 창이 각각 blur 되었을 때 */
 .password-blur {
   border: 1px solid #f77;
-  z-index: 2;
+  z-index: 1;
 }
 
 /* 비밀번호 입력 창이 blur 된 다음, 다시 focus 되었을 때 */
 .password-blur.focus-visible {
+  z-index: 2;
   box-shadow: 0 0 0 3px rgba(255, 119, 119, 0.3);
 }
 
